# HospitalVideo-Process

./: .gitignore  CHANGELOG.md  PRD.md  README.md  TASK_COMPLEXITY_ANALYSIS.md  WORK_TODO.md  demo.py  env.example  gastric_result.json  pyproject.toml  test_api_call.py
data/samples/: appendectomy_01.txt  cholecystectomy_01.txt  gastric_perforation_01.txt
src/: __init__.py  evaluate.py  openai_client.py  prompt.py  utils.py
